fixed overlap

--- a/src/styles/homePage.css
+++ b/src/styles/homePage.css
@@ -58,9 +58,13 @@
   .home-body{
     min-height: 60vh;
     max-height: 60vh;
-    overflow-x: hidden;
-    overflow-y: hidden;
+    /* overflow-x: hidden; */
+    overflow: visible;
     /* background-color: black; */
+  }
+
+  .home-box{
+    overflow: hidden;
   }
   
   
